{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 158,
  "lineage": "b05e89ac-f636-393a-b45d-7cc2a5388ecd",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "IIS-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b1f2b17be9b81cdc",
            "arn": "arn:aws:ec2:us-east-1:678878256416:instance/i-0aff38f87ccfd191d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aff38f87ccfd191d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afa050435a01e2e8",
            "private_dns": "ip-10-0-1-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.136",
            "public_ip": "35.170.51.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a38712935e4bc65",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0c7f372470db8bc",
            "tags": {
              "Name": "rafay-IIS-server"
            },
            "tags_all": {
              "Name": "rafay-IIS-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047abebbedd7c9642"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.rafay-key",
            "module.EC2.aws_security_group.IIS-server",
            "module.EC2.tls_private_key.EC2-key",
            "module.subnets.aws_subnet.pub-sub1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b1f2b17be9b81cdc",
            "arn": "arn:aws:ec2:us-east-1:678878256416:instance/i-03f1c5b9c32162f77",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f1c5b9c32162f77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097f18b8d124c9457",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-015b333d47ae5dfb7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0c7f372470db8bc",
            "tags": {
              "Name": "rafayWebServer"
            },
            "tags_all": {
              "Name": "rafayWebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cb2ad35b7d7a4cf"
            ]
          },
          "dependencies": [
            "module.EC2.aws_security_group.web_sg",
            "module.subnets.aws_subnet.pub-sub1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "IIS-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:security-group/sg-047abebbedd7c9642",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047abebbedd7c9642",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rafay-iis-sg20241231124929382200000002",
            "name_prefix": "rafay-iis-sg",
            "owner_id": "678878256416",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "rafay-IIS-server-sg"
            },
            "tags_all": {
              "name": "rafay-IIS-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:security-group/sg-01cb2ad35b7d7a4cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cb2ad35b7d7a4cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-20241231124929385900000003",
            "name_prefix": "web-sg-",
            "owner_id": "678878256416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "rafay-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:678878256416:loadbalancer/app/rafay-lb-tf/6c30b0aedd9da6ee",
            "arn_suffix": "app/rafay-lb-tf/6c30b0aedd9da6ee",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rafay-lb-tf-382833217.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:678878256416:loadbalancer/app/rafay-lb-tf/6c30b0aedd9da6ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rafay-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0741f84962d0e7f41"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4a64b9b7ead2cb9"
              },
              {
                "subnet_id": "subnet-0b0c7f372470db8bc"
              }
            ],
            "subnets": [
              "subnet-0a4a64b9b7ead2cb9",
              "subnet-0b0c7f372470db8bc"
            ],
            "tags": {
              "Name": "rafay-lb"
            },
            "tags_all": {
              "Name": "rafay-lb"
            },
            "vpc_id": "vpc-0016311411bdf0310",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Load-balancer.aws_security_group.rafay-ld-sg",
            "module.subnets.aws_subnet.pub-sub1",
            "module.subnets.aws_subnet.pub-sub2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rafay_lis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:678878256416:listener/app/rafay-lb-tf/6c30b0aedd9da6ee/be6ffd0762ee4adb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:678878256416:targetgroup/LB-tg/bf78fe4bb933da29",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:678878256416:listener/app/rafay-lb-tf/6c30b0aedd9da6ee/be6ffd0762ee4adb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:678878256416:loadbalancer/app/rafay-lb-tf/6c30b0aedd9da6ee",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "name": "rafay-lis"
            },
            "tags_all": {
              "name": "rafay-lis"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load-balancer.aws_lb.rafay-lb",
            "module.Load-balancer.aws_lb_target_group.rafay-tg",
            "module.Load-balancer.aws_security_group.rafay-ld-sg",
            "module.subnets.aws_subnet.pub-sub1",
            "module.subnets.aws_subnet.pub-sub2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rafay-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:678878256416:targetgroup/LB-tg/bf78fe4bb933da29",
            "arn_suffix": "targetgroup/LB-tg/bf78fe4bb933da29",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:678878256416:targetgroup/LB-tg/bf78fe4bb933da29",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "LB-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "rafay-tg"
            },
            "tags_all": {
              "name": "rafay-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Load-balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rafay-ld-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:security-group/sg-0741f84962d0e7f41",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0741f84962d0e7f41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "678878256416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rafay-load-balancer-sg"
            },
            "tags_all": {
              "Name": "rafay-load-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Routes-Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:route-table/rtb-043016a9b49e49f73",
            "id": "rtb-043016a9b49e49f73",
            "owner_id": "678878256416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rafay-Pvt-RT"
            },
            "tags_all": {
              "Name": "rafay-Pvt-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Routes-Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:route-table/rtb-0b1feb440cbe4be16",
            "id": "rtb-0b1feb440cbe4be16",
            "owner_id": "678878256416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070deb5603234acab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rafay-Pub-RT"
            },
            "tags_all": {
              "Name": "rafay-Pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.mudz-igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Routes-Tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c90df8444c418bb",
            "route_table_id": "rtb-043016a9b49e49f73",
            "subnet_id": "subnet-04335c11839b55f59"
          },
          "dependencies": [
            "module.Routes-Tables.aws_route_table.Private-Route",
            "module.subnets.aws_subnet.pvt-sub1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Routes-Tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a4ed65b84626776",
            "route_table_id": "rtb-0b1feb440cbe4be16",
            "subnet_id": "subnet-0b0c7f372470db8bc"
          },
          "dependencies": [
            "module.Routes-Tables.aws_route_table.public-route",
            "module.subnets.aws_subnet.pub-sub1",
            "module.vpc.aws_internet_gateway.mudz-igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:security-group/sg-0bfb034df5dcb4ebe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfb034df5dcb4ebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rafay-asg",
            "name_prefix": "",
            "owner_id": "678878256416",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "rafay-asg-sg"
            },
            "tags_all": {
              "name": "rafay-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:subnet/subnet-0b0c7f372470db8bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0c7f372470db8bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678878256416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafay-Public-Subnet1"
            },
            "tags_all": {
              "Name": "rafay-Public-Subnet1"
            },
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:subnet/subnet-0a4a64b9b7ead2cb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4a64b9b7ead2cb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678878256416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafay-Public-Subnet2"
            },
            "tags_all": {
              "Name": "rafay-Public-Subnet2"
            },
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:subnet/subnet-04335c11839b55f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04335c11839b55f59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678878256416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafay-Private-subnet1"
            },
            "tags_all": {
              "Name": "rafay-Private-subnet1"
            },
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mudz-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:internet-gateway/igw-070deb5603234acab",
            "id": "igw-070deb5603234acab",
            "owner_id": "678878256416",
            "tags": {
              "Name": "rafay-igway"
            },
            "tags_all": {
              "Name": "rafay-igway"
            },
            "vpc_id": "vpc-0016311411bdf0310"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678878256416:vpc/vpc-0016311411bdf0310",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065756749402b8687",
            "default_route_table_id": "rtb-03aa27ed8c660f440",
            "default_security_group_id": "sg-0635578382213d8c4",
            "dhcp_options_id": "dopt-f61bbc8c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0016311411bdf0310",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03aa27ed8c660f440",
            "owner_id": "678878256416",
            "tags": {
              "Name": "rafay_vpc"
            },
            "tags_all": {
              "Name": "rafay_vpc"
            }
          }
        }
      ]
    }
  ]
}